package mandelbrotengine;

/* Klasse für die mathematische Logik
 * - Berechnung pro Punkt
 * - Umrechnung von Pixelkoordinate zu komplexe Zahlen
*/

public class MandelbrotCalculator {

public static int MandelbrotCalculator (double re, doiblee im, int maxIter) {

    //Parameter:
    // re : Realteil der komplexen Zahl c = re + i*im
    // im : Imaginäranteil von c
    // maxIter: Maximale Iterationen, die durchgeführt werden sollen
    
    double x = 0.0; //Realteil von z
    double y = 0.0; // Imaginärteil von z
    int iter = 0; //Zählt die Wiederholungen

    
    

  }
}



