@startuml
skinparam style strictuml
skinparam classAttributeIconSize 0

' Interfaces
interface WorkerInterface <<Remote>>{
    +computeTask
    }
interface Bootstrap <<Remote>> {
    +void registerWorker()
    +Remote getWorker()
    +List<Remote> getWorkerList()
    +List<String> getList()
    +void clearList()
    +String getVersion()
}

' Klassen
class GUI {
    +void main()
    +void givePixelData()
}
class Controller{    
    -Bootstrap bootstrap
    +startComputation()
    }
class MandelbrotCalculator{
    +int computePixel()
}
class WorkerImpl{
    +TaskResult computeTask()
}
class WorkerServer{
    +main()
}
class Task 

class TaskResult {
    +int[][] getPixelData()
}

' Beziehungen

GUI --> Controller : uses
Controller --> Bootstrap : get WorkerList from
Controller ..|> WorkerInterface : uses
Controller ..|> WorkerImpl : calls per RMI
Controller --> Task : creates
Controller --> TaskResult : receives
WorkerImpl --> WorkerInterface : implements
WorkerImpl --> MandelbrotCalculator : uses
WorkerServer -->Bootstrap : registers Worker
WorkerServer --> WorkerImpl : starts
WorkerImpl --> TaskResult : returns
Task --> WorkerImpl : computes
@enduml

